<resources>
    <string name="app_name">Maps</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectionDetails">Детали</string>
    <string name="selectionNotifications">Уведомления</string>
    <string name="selectionMap">Карта</string>
    <string name="sectionSettings">Настройки</string>
    <string name="sectionRoute">Маршруты</string>

    <string name="settings_app_version">Development version Alpha v0.0.1</string>
    <string name="settings_about_app">О приложении</string>
    <string name="settings_notification_history">Очистить историю уведомлений</string>
    <string name="settings_navigation_prefs">Настройки навигации</string>
    <string name="settings_offline_connection_prefs">Настройки соединений</string>
    <string name="settings_offline_app_prefs">Настройки карты</string>
    <string name="settings_offline_sound">Звук</string>
    <string name="settings_offline_maps_description">Качайте оффлайн карты, чтобы получить доступ к возможностям
        приложения без интернета
    </string>
    <string name="settings_offline_maps">Оффлайн карты</string>

    <string name="notification_title">События на дороге</string>
    <string name="notification_add_btn">Добавить событие</string>
    <string name="notifications_no_data_label">Нет событий.</string>

    <string name="intro_about">Открыв карту, вы увидете все доступные устройства в радиусе 1км</string>
    <string name="intro_settings">Открыв карту, вы увидете все доступные устройства в радиусе 1км</string>
    <string name="intro_offline">Открыв карту, вы увидете все доступные устройства в радиусе 1км</string>
    <string name="intro_routes">Открыв карту, вы увидете все доступные устройства в радиусе 1км</string>
    <string name="intro_skip_btn">Пропустить</string>

    <string name="settings_offline_map_accept_btn">Выбрать</string>
    <string name="settings_offline_map_recycle_btn">Отменить</string>

    <string name="notifying_title">Добавьте событие на дороге</string>
    <string name="notifying_comment">Комментарий к событию</string>
    <string name="notifying_accept_btn">Добавить событие</string>

    <string name="dialog_accept_btn_cancel">Отменить</string>
    <string name="dialog_accept_btn_accept">Принять</string>

    <string name="settings_offline_map_dialog_accept">Загрузить</string>
    <string name="settings_offline_map_dialog_subtitle">Загрузка карт требует стабильного подключения к интернету.
    </string>

    <string name="routing_title">Маршруты</string>
    <string name="routing_from">Откуда</string>

    <string name="toolbar_title">Тулбар</string>

    <string name="offline_map_settings_toolbar_title">Оффлайн карты</string>
    <string name="region_view_download_btn_label">Загрузить</string>
    <string name="routing_compose_toolbar_title">Создание маршрута</string>
    <string name="routing_compose_btn_label">Построить маршрут</string>
    <string name="routing_no_data_label">Нет маршрутов.</string>
    <string name="notifying_type_support">Поломка</string>
    <string name="notifying_type_collapse">ДТП</string>
    <string name="notifying_type_ambulance">Неотложенная помощь</string>
    <string name="notifying_type_message">Сообщение</string>
    <string name="notification_idle_text">Нет уведомлений</string>
    <string name="notification_collapse_alert_title">Авария!</string>


</resources>
