<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".presentation.fragment.notifying.NotifyingFragment">

    <TextView
            style="@style/AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/notifying_title"/>
    <TextView
            style="@style/AppTheme.Title"
            android:text="@string/notifying_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notifying_comment_label"
            app:layout_constraintStart_toStartOf="@+id/notifying_comment_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/notifying_type_label"
            android:layout_marginTop="16dp"/>

    <android.support.v7.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:id="@+id/notifying_type_ambulance"
            android:src="@drawable/ic_ambulance"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toEndOf="@+id/notifying_type_collapse" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/notifying_type_collapse"
            android:src="@drawable/ic_collapse"
            app:layout_constraintStart_toEndOf="@+id/notifying_type_support"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/notifying_type_ambulance"
            app:layout_constraintEnd_toStartOf="@+id/notifying_type_ambulance"/>

    <android.support.v7.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/notifying_type_support"
            android:src="@drawable/ic_support"
            app:layout_constraintStart_toEndOf="@+id/notifying_type_message"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/notifying_type_collapse"
            app:layout_constraintEnd_toStartOf="@+id/notifying_type_collapse"/>

    <android.support.v7.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/notifying_type_message"
            android:src="@drawable/ic_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/notifying_type_support"
            app:layout_constraintEnd_toStartOf="@+id/notifying_type_support"/>

    <TextView
            style="@style/AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notifying_type_label"
            app:layout_constraintTop_toBottomOf="@+id/notifying_type_ambulance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" tools:text="Дтп"/>

    <android.support.design.widget.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/notifying_comment_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/notifying_comment_edit_text"/>

    <Button
            style="@style/AppTheme.TextButton"
            android:text="@string/notifying_accept_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/notifying_accept_btn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/notifying_comment_edit_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>